[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/environment/slime/slime13.png" type="Texture" id=1]
[ext_resource path="res://assets/environment/slime/slime14.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/slime/slime12.png" type="Texture" id=3]
[ext_resource path="res://environment/hazards/slimeTube/slimeTube2.gd" type="Script" id=4]
[ext_resource path="res://assets/environment/slime/slime4.png" type="Texture" id=5]
[ext_resource path="res://assets/environment/slime/slime6.png" type="Texture" id=6]
[ext_resource path="res://assets/environment/slime/slime9.png" type="Texture" id=7]
[ext_resource path="res://assets/environment/slime/slime3.png" type="Texture" id=8]
[ext_resource path="res://assets/environment/slime/slime10.png" type="Texture" id=9]
[ext_resource path="res://assets/environment/slime/slime11.png" type="Texture" id=10]
[ext_resource path="res://assets/environment/slime/slime5.png" type="Texture" id=11]
[ext_resource path="res://assets/environment/slime/slime7.png" type="Texture" id=12]
[ext_resource path="res://assets/environment/slime/slime8.png" type="Texture" id=13]
[ext_resource path="res://pixel_smoother.tres" type="Material" id=14]
[ext_resource path="res://assets/environment/slime/tube.png" type="Texture" id=15]
[ext_resource path="res://assets/environment/slime/slime1.png" type="Texture" id=16]
[ext_resource path="res://assets/environment/slime/slime2.png" type="Texture" id=17]
[ext_resource path="res://assets/environment/slime/slimeEmpty.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 103 )

[node name="slimeTube" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 14 )
texture = ExtResource( 15 )

[node name="SlimeAnimation" type="AnimatedSprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 0, 119 )
frames = SubResource( 1 )

[node name="slimeCollisionArea" type="Area2D" parent="."]
position = Vector2( -1, 92 )
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="slimeCollisionArea"]
position = Vector2( 2, 141 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
